--- a/index.html
+++ b/index.html
@@ -79,12 +79,26 @@
             <img src="rknarayan.jpg" id="bachelorofarts">
         </a>
     </section>
-    <section id="works">
+   <section id="works">
         <h3>My Works</h3>
         <div class="line"></div>
         <br>
-        <h6>Error<br>No Works Yet</h6>
+        <p>Here are some of the stories written by me</p>
+    <h6>The Evil Will Always Lose</h6>
+        <br>
+        <br>
+        <h5>Long ago, there was a city named Chicago in USA. There lived a man in that city named Robert. He is a scientist and was working all day. He came late in the night. One day, decided to spend some time with his family His child, Richard and his wife, Lucy were very happy on hearing this. Richard was fond of horses His father taught him many breeds of horses when he was at a very young age. One day, when Richard went to school, he saw some of his friends fighting with other friends. When he came towards his friends, he saw his friends, Johnson, Jackie, George and Michael fighting with Emerson, Edward and Ronald. Richard asked them, “Why are you all fighting?” George replied, “Emerson took our books and is lying to us that he did not take them!” As Richard was an intelligent boy, Michael suggested, “Richard, can you prove that Emerson took our books?” Emerson was a little afraid, but he agreed. Richard saw Emerson’s backpack. It was a bit larger than usual. He found out that the books were in Emerson’s backpack. Emerson refused to show his backpack. George and Jackie held Emerson while Johnson pulled out his backpack and checked it. The books of George, Johnson, Jackie and Michael were in the backpack. They said this to their teacher who punished Emerson, Edward and Ronald. Emerson could not bear this and decided that one day he will kill Richard. George, Johnson, Jackie and Michael were grateful to Richard and they all became the best of friends. When Richard grew up, he bought home a horse and named it Swift. He trained it every day. Emerson bought a buffalo as he thought it would be the best animal to kill Richard. He named it Terro. Within a few days, the buffalo was doing what Emerson said. Emerson then made plans to kill Richard. He sat on his buffalo and started riding it finding where Richard was. When he saw Richard, he was shocked to find a horse with him. He decided to kill the horse first and then Richard. He asked Terro to attack Swift, but Swift escaped speedily. Seeing this Richard decided to make Swift strong. He made him do exercises and Swift was strong now. One day Emerson challenged Richard for a battle. Richard agreed. He called George, Johnson, Jackie and Michael with him for battling. He gave continuous training to Swift. Emerson was sleeping on his bed so Terro too slept. On the day of the battle, Emerson gathered Edward and Ronald for support. He went to the battle. After a continuous long battle that lasted for several days, Richard and his friends won the battle while Emerson, Edward and Ronald begged for mercy. Richard, being a kind man, made friends with Emerson, Edward and Ronald. They all lived together from that day. </h5>
+        <br>
+        <br>
+        <p>Here's my next story</p>
+        <br>
+        <br>
+        <h6>The Lost Elephant</h6>
+        <br>
+        <br>
+        <h5>Once, there was an orphan child. He named himself Henry. He was lonely. One day, he decided to work hard and get some money. He worked for two days and got some money. Whithit, he went to the zoo and asked them to release an orphaned elephant baby. He adopted it and grew with it. He thought it would be better to live in the jungle as there are all resources for free there. Then, he named the elephant Jim. Jim was a strong elephant. He enjoyed living with Henry and they became the best of friends.    Their bond grew so strong that one could not live without the other. One day, a rat came in front of Jim. Jim was scared and ran away deep into the woods. Henry came there and was shocked to lose Jim. He cried so much that day. He gathered courage and started lookim for Jim. On the way, he slipped into a deep hole he was then saved by an elf with magic. The elf granted him a wish that he can understand and speak elephants' language. Then he met a giant stuck in a rock. He helped him to get out of it. The giant was greatful to Henry. He gave him a rock and said it will grant any wish he asks for it. Finally he met a large snake. It was approximately 64 feet long and 10 feet wide. He asked the rock to destroy the snake. The snake disappeared. He then met a herd of elephants. He asked them to find Jim in elephant language. The elephants needed something from Henry in order to help him. Henry gave som delicious fruits. They then enclosed Jim. Jim ran towards Henry. They were happy forever. </h5>
     </section>
+
     <section id="inspiration">
     <h3>Inspiration</h3>
         <div class="line"></div>
