--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
         <img src="RK_Narayan.jpg" id="rkn">
         <h6>R.K.Narayan</h6>
         </a>
+        <h6>Narayan. Rasipuram Krishnaswami Iyer Narayanaswami (10 October 1906 – 13 May 2001), commonly known as R. K. Narayan, was an Indian writer known for his work set in the fictional South Indian town of Malgudi. ... He was a leading author of early Indian literature in English along with Mulk Raj Anand and Raja Rao.</h6>
         <a href="https://en.wikipedia.org/wiki/Shashi_Tharoor" target="_blank">
         <img src="Shashi_Tharoor_MP.jpg" id="st">
         <h6>Shashi Tharoor</h6>
         </a>
+        <h6>Shashi Tharoor (born 9 March 1956) is an Indian politician, writer and former international diplomat who has been serving as Member of Parliament, Lok Sabha from Thiruvananthapuram, Kerala, since 2009. He was formerly Under-Secretary General of the United Nations and contested for the post of Secretary-General in 2006.</h6>
     </section>
