--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <img src="mkgandhi.jpeg" id="mkgandhipic">
         </a>
         <a href="https://www.goodreads.com/book/show/1007172.The_Bachelor_of_Arts" target="_blank">
-            <img src="rknarayan.jpg" id="bachelorofarts">
+            <img src="bachelorofarts.jpg" id="bachelorofarts">
         </a>
     </section>
    <section id="works">
