--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li class="links"><a href="#inspiration">Inspiration</a></li>
         <li class="links"><a href="#contact">Contact</a></li>
     </ul>
-    <section id="secId" class="parralax-container">
+    <section id="secId" class="parallax-container">
         <div class="parallax-inner">
             <img src="https://images.unsplash.com/photo-1455651264681-40d634a35ce4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHw&ixlib=rb-1.2.1&q=80&w=400" class="hobby-img">
             <h1>My Favourite Hobby<br><span id="myhobby">Reading Books</span></h1>
